[package]
name = "fvm_explorer_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cbor = "0.4.1"
actix-web = "4.2.1"
serde = "1.0.144"
serde_json = "1.0.85"
tokio = { version = "1.19.2", features = ["full"] }
env_logger = "0.9.0"
uuid="1.1.2"
derive_builder = "0.11.2"
anyhow = "1.0.65"
serde_ipld_dagcbor="0.2.2"
fvm_ipld_encoding = "0.3.0"
hex = "0.4.3"
clickhouse-rs = "1.0.0-alpha.1"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.6"
deadpool-postgres = { version = "0.10.2", features = ["serde"] }
derive_more = "0.99.17"
config = "0.13.1"
dotenv = "0.15.0"
envy = "0.4.2"
serde_with = "2.0.1"
serde_tuple = "0.5.0"
serde_bytes="0.11.2"
serde_repr="0.1.9"
actix-web-grants="3.0.1"
either="1.7.0"
chrono = "0.4.22"
log = "0.4.17"
sql_lexer="0.9.3"
lotus_rs = { path = "../libs/lotus_rs"}
actix-cors = "0.6.3"
fil_actor_account = "9.0.1"
fil_actor_cron = "9.0.1"
fil_actor_datacap = "9.0.1"
fil_actor_init = "9.0.1"
fil_actor_market = "9.0.1"
fil_actor_miner = "9.0.1"
fil_actor_multisig = "9.0.1"
fil_actor_paych = "9.0.1"
fil_actor_power = "9.0.1"
fil_actor_reward = "9.0.1"
fil_actor_system = "9.0.1"
fil_actor_verifreg = "9.0.1"
