[package]
name = "flow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc-core = "18.0.0"
serde = "1.0.144"
serde_json = "1.0.85"
tokio = { version = "1.19.2", features = ["full"] }
log = "0.4.17"
env_logger = "0.9.0"
uuid="1.1.2"
derive_builder = "0.11.2"
lotus_rs = { path = "../libs/lotus_rs"}
anyhow = "1.0.65"
base64="0.13.0"
serde_cbor="0.11.2"
serde_ipld_dagcbor="0.2.2"
cbor="0.4.1"
bytes="1.2.1"
jsonrpc-v2 = "0.11.0"
hex = "0.4.3"
fvm_ipld_encoding="0.3.0"
web3 = "0.18.0"
ethabi = "18.0.0"