[package]
name = "lotus_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde_tuple = "0.5.0"
tokio = { version = "1.19.2", features = ["full"] }
log = "0.4.17"
env_logger = "0.9.0"
uuid="1.1.2"
derive_builder = "0.11.2"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
anyhow = "1.0"
futures = "0.3"
bitflags = "1.3.2"
fvm_ipld_encoding="0.3.0"